# xpolyelec

./: LICENSE  README.md  pyproject.toml
examples/: compare_strain_models.py  reproduce_figures.py  user_csv_workflow.py
examples/sample_data/: D.csv  U.csv  kappa.csv  rho_el.csv  rho_plus.csv  t0_plus.csv
src/: fits.py  io.py
src/defaults/: default_config.json  paper_fits.json
src/xpolyelec/: __init__.py  api.py  config.py  io.py  plotting.py  solver.py  transport.py
src/xpolyelec/defaults/: default_config.json
src/xpolyelec/strain/: __init__.py  base.py  gent.py  mooney_rivlin.py  neo_hookean.py  none_strain.py
tests/: test_config.py  test_fits.py  test_io.py  test_solver.py  test_strain_models.py
