[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xpolyelec"
version = "0.1.0"
description = "Reproducibility package for Patel et al. (2025): Ion transport in concentrated crosslinked solid polymer electrolytes."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "xpolyelec contributors" },
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xpolyelec = ["defaults/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
